# u_classifier_hd

./: README.md  pyproject.toml
data/: dados_shipp.csv
examples/: real_data_example.ipynb  simulation_example.ipynb
src/u_classifier_hd/: __init__.py  aux.py  core.py
